--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,7 +2,7 @@
   <div class='row'>
     <div class='col-md-6'>
 
-    <h2>Secrets Registration Page</h2>
+    <h2>You're Trying to Swap in this Page on AWS</h2>
     <form action="/users" method="post">
         <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
 
